made player background blurred, fixed exiting fullscreen using escape and added hotkey

--- a/styles.css
+++ b/styles.css
@@ -68,7 +68,7 @@ body.dragging {
   bottom: 22px; /* Adjust this value to position it below the title bar */
   left: 50px;
   width: 100%;
-  z-index: 1000;
+  z-index: 500;
   pointer-events: none; /* This allows clicks to pass through to elements behind it */
   box-shadow: 0 0 10px rgb(0, 0, 0);
 }
@@ -1011,6 +1011,7 @@ body.dragging {
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
+  backdrop-filter: blur(5px);
   z-index: 999;
   display: flex;
   justify-content: center;
